cmake_minimum_required(VERSION 3.27)
project(ProjectEuler C)

set(CMAKE_C_STANDARD 11)

add_executable(ProjectEuler main.c
        problem-1.c
        problem-1.c
        problem-2.c
        problem-2.c
        problem-2.c
        problem-3.cpp
        problem-3.cpp
        problem-3.cpp
        problem-3.c)
